@startuml

skinparam classBackgroundColor #1e1e2e
skinparam classBorderColor #89b4fa
skinparam classArrowColor #cba6f7
skinparam classFontColor #cdd6f4
skinparam classAttributeFontColor #a6e3a1
skinparam backgroundColor #181825

abstract class Personal {
  - nombre: String
  - id: String
  - especialidad: String
  + Personal(nombre, id, especialidad)
  + getNombre(): String
  + getId(): String
  + {abstract} generarReporte(): String
}

class Medico {
  - citas: ArrayList<Cita>
  + Medico(nombre, id, especialidad)
  + agendarCita(fecha: String): void
  + agendarCita(fecha: String, motivo: String): void
  + generarReporte(): String
  + getCitas(): ArrayList<Cita>
}

class Enfermero {
  - turno: String
  + Enfermero(nombre, id, especialidad, turno)
  + generarReporte(): String
}

abstract class Paciente {
  - nombre: String
  - codigo: String
  - edad: int
  + Paciente(nombre, codigo, edad)
  + getNombre(): String
  + getCodigo(): String
  + {abstract} obtenerInfo(): String
}

class PacienteAmbulatorio {
  - proximaCita: String
  + PacienteAmbulatorio(nombre, codigo, edad, proximaCita)
  + obtenerInfo(): String
}

class PacienteHospitalizado {
  - numeroCama: int
  - diasHospitalizado: int
  + PacienteHospitalizado(nombre, codigo, edad, cama, dias)
  + obtenerInfo(): String
  + getDiasHospitalizado(): int
}

class Cita {
  - fecha: String
  - motivo: String
  - paciente: Paciente
  - medico: Medico
  + Cita(fecha, motivo, paciente, medico)
  + getInfo(): String
}

class Sala {
  - nombre: String
  - capacidad: int
  - pacientes: ArrayList<Paciente>
  + Sala(nombre, capacidad)
  + agregarPaciente(p: Paciente): void
  + eliminarPaciente(codigo: String): void
  + buscarPaciente(codigo: String): Paciente
  + getNombre(): String
  + getCapacidad(): int
  + getPacientes(): ArrayList<Paciente>
}

class Hospital {
  - nombre: String
  - salas: ArrayList<Sala>
  - personal: ArrayList<Personal>
  + Hospital(nombre)
  + agregarSala(s: Sala): void
  + agregarPersonal(p: Personal): void
  + buscarPaciente(codigo: String): Paciente
  + generarReporteGeneral(): void
  + getSalas(): ArrayList<Sala>
  + getPersonal(): ArrayList<Personal>
}

Personal <|-- Medico
Personal <|-- Enfermero
Paciente <|-- PacienteAmbulatorio
Paciente <|-- PacienteHospitalizado
Hospital *-- Sala
Sala o-- Paciente
Medico --> Cita
Cita --> Paciente
Cita --> Medico

note bottom of PacienteHospitalizado : <<final>>
note bottom of Hospital : Composicion con Sala
note right of Sala : Agregacion con Paciente

@enduml
